i need this to get mat icons to show up

--- a/frontend-fit-tracker/src/index.html
+++ b/frontend-fit-tracker/src/index.html
@@ -10,4 +10,6 @@
 <body>
   <app-root></app-root>
 </body>
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </html>
